# logilica-weekly-report

./: .gitignore  README.md  pyproject.toml  requirements.txt  weekly_report.yaml
logilica_weekly_report/: __main__.py  cli_data_sources.py  cli_weekly_report.py  configuration_schema.py  download_pdfs.py  page_dashboard.py  page_navigation.py  page_settings.py  pdf_extract.py  playwright_session.py  update_gdoc.py
src/: download_pdfs.py  pdf_extract.py  requirements.txt
src/logilica/: __init__.py  __main__.py  configuration_schema.py  data_sources.py  download_pdfs.py  pdf_extract.py  playwright_session.py  update_gdoc.py  weekly_report.py
src/logilica/pages/: __init__.py  base_page.py  login_page.py
tests/: test_cli_weekly_report.py  test_configuration_schema.py  test_pdf_extract.py  test_update_gdoc.py
